adjusted section-header styles for action buttons

--- a/client/src/app/components/shared/section-navigation/section-navigation.component.less
+++ b/client/src/app/components/shared/section-navigation/section-navigation.component.less
@@ -14,6 +14,11 @@
   &.has-relations {
     padding: @default-padding-xs @default-padding-xs;
   }
+  //same for action btns
+  &.has-actions {
+    padding: @default-padding-xs - 1 @default-padding-xs - 1;
+  }
+
 }
 
 // using ng-deep to select child zorro component elements
