--- a/client/src/app/components/shared/section-navigation/section-navigation.component.html
+++ b/client/src/app/components/shared/section-navigation/section-navigation.component.html
@@ -1,5 +1,5 @@
 <nz-row id="nav-container"
-  [ngClass]="{ 'has-relations': relationsTpl !== undefined }">
+  [ngClass]="{ 'has-relations': relationsTpl !== undefined, 'has-actions': actionsTpl !== undefined }">
 
   <!-- breadcrumbs -->
   <nz-col nzSpan="10"
