--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -65,6 +65,11 @@
             </button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Assertion">
+            </cvc-entity-subscription-button>
+          </nz-space-item>
+
         </nz-space>
       </nz-page-header-extra>
 
