--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
@@ -73,6 +73,10 @@
             </button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="EvidenceItem">
+            </cvc-entity-subscription-button>
+          </nz-space-item>
         </nz-space>
       </nz-page-header-extra>
 
