--- a/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.component.html
@@ -48,6 +48,10 @@
             </button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Variant">
+            </cvc-entity-subscription-button>
+          </nz-space-item>
         </nz-space>
       </nz-page-header-extra>
 
