--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -69,6 +69,11 @@
             </button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Variant">
+            </cvc-entity-subscription-button>
+          </nz-space-item>
+
         </nz-space>
       </nz-page-header-extra>
       <nz-page-header-content>
