--- a/client/src/app/components/sources/source-tag/source-tag.component.html
+++ b/client/src/app/components/sources/source-tag/source-tag.component.html
@@ -33,5 +33,5 @@
   <i nz-icon
     nzType="civic-source"
     nzTheme="twotone"
-    nzTwotoneColor="#F9BA45"></i> {{ source.sourceType | sourceTypeDisplay }}:&nbsp;{{ source.citation}}
+    nzTwotoneColor="#F9BA45"></i> {{ this.displayName }}
 </ng-template>
