Update diff list to show original and final values

--- a/client/src/app/components/shared/list-diff/list-diff.component.html
+++ b/client/src/app/components/shared/list-diff/list-diff.component.html
@@ -1,8 +1,23 @@
 <nz-row [nzGutter]="16" >
-    <nz-col [nzSpan]="8">
+  <nz-col [nzSpan]="8">
+    <!-- show original items -->
+    <nz-list nzHeader="Original {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
+    <nz-list-item *ngFor="let item of original" ngClass="current">
+        <span nz-typography>
+        <ng-container
+            [ngTemplateOutlet]="itemTemplateRef || null"
+            [ngTemplateOutletContext]="{ $implicit: item }">
+        </ng-container>
+        </span>
+    </nz-list-item>
+    <nz-list-empty *ngIf="original.length === 0"
+    nzNoResult="No {{ entityType }}s"></nz-list-empty>
+    </nz-list>
+  </nz-col>
+  <nz-col [nzSpan]="8">
       <!-- show removed items -->
       <nz-list nzHeader="Removed {{ entityType }}s" nzBordered nzType="inner" nzSize="small">
-        <nz-list-item *ngFor="let item of removed">
+        <nz-list-item *ngFor="let item of removed" ngClass="removed">
           <span nz-typography>
             <ng-container
               [ngTemplateOutlet]="itemTemplateRef || null"
@@ -11,13 +26,11 @@
           </span>
         </nz-list-item>
         <nz-list-empty *ngIf="removed.length === 0"
-        [nzNoResult]="'No {{ entityType }}s Removed'"></nz-list-empty>
+        nzNoResult="No {{ entityType }}s Removed"></nz-list-empty>
       </nz-list>
-    </nz-col>
-    <nz-col [nzSpan]="8">
       <!-- show added items -->
       <nz-list nzHeader="Added {{ entityType }}s" nzBordered nzType="inner" nzSize="small">
-        <nz-list-item *ngFor="let item of added">
+        <nz-list-item *ngFor="let item of added" ngClass="added">
           <span nz-typography>
             <ng-container
               [ngTemplateOutlet]="itemTemplateRef || null"
@@ -26,13 +39,10 @@
           </span>
         </nz-list-item>
         <nz-list-empty *ngIf="added.length === 0"
-          [nzNoResult]="'No {{ entityType }}s Added'"></nz-list-empty>
+          nzNoResult="No {{ entityType }}s Added"></nz-list-empty>
       </nz-list>
-    </nz-col>
-    <nz-col [nzSpan]="8">
-      <!-- show final list -->
-      <nz-list nzHeader="Revised {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
-        <nz-list-item *ngFor="let item of final">
+      <nz-list nzHeader="Kept {{ entityType }}s" nzBordered nzType="inner" nzSize="small">
+        <nz-list-item *ngFor="let item of kept" ngClass="kept">
           <span nz-typography>
             <ng-container
               [ngTemplateOutlet]="itemTemplateRef || null"
@@ -40,8 +50,23 @@
             </ng-container>
           </span>
         </nz-list-item>
-        <nz-list-empty *ngIf="final.length === 0"
-          [nzNoResult]="'No {{ entityType }}s Kept'"></nz-list-empty>
+        <nz-list-empty *ngIf="kept.length === 0"
+          nzNoResult="No {{ entityType }}s Kept"></nz-list-empty>
       </nz-list>
-    </nz-col>
+  </nz-col>
+  <nz-col [nzSpan]="8">
+    <!-- show final list -->
+    <nz-list nzHeader="Revised {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
+      <nz-list-item *ngFor="let item of final" ngClass="suggested">
+        <span nz-typography>
+          <ng-container
+            [ngTemplateOutlet]="itemTemplateRef || null"
+            [ngTemplateOutletContext]="{ $implicit: item }">
+          </ng-container>
+        </span>
+      </nz-list-item>
+      <nz-list-empty *ngIf="final.length === 0"
+        nzNoResult="No {{ entityType }}s"></nz-list-empty>
+    </nz-list>
+  </nz-col>
 </nz-row>
