--- a/client/src/app/components/revisions/revision-value-diff/revision-value-diff.component.less
+++ b/client/src/app/components/revisions/revision-value-diff/revision-value-diff.component.less
@@ -28,6 +28,11 @@
     color: @geekblue-8;
   }
 
+  &.original .background {
+    background: @geekblue-1;
+    color: @geekblue-8;
+  }
+
   del, ins {
     text-decoration: none;
   }
@@ -41,4 +46,20 @@
     font-weight: normal;
     background: #9f9;
   }
+
+  .del {
+    font-weight: normal;
+    background: #fee;
+    color:#b00;
+  }
+
+  .ins {
+    font-weight: normal;
+    background: #dfd;
+    color:#080;
+  }
+}
+
+ul {
+  list-style: none;
 }
