Refactor GeneRevisions component to not need a service

--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -37,7 +37,7 @@
                   style="text-align: right;">
                   <nz-space nzDirection="horizontal">
                     <nz-space-item>
-                      <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg">
+                      <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
                         <button type="submit"
                           nz-button
                           cvcOrgSelectorBtn
@@ -48,7 +48,7 @@
                       </cvc-org-selector-btn-group>
                     </nz-space-item>
                     <nz-space-item>
-                      <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg">
+                      <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
                         <button type="submit"
                           nz-button
                           cvcOrgSelectorBtn
