--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -5,6 +5,11 @@
     </ng-container>
   </nz-col>
   <nz-col nzSpan="6">
+    <cvc-participant-list listTitle="Revision Status" [preselectedOption]="this.selectableStatuses[0]" [participantList]="selectableStatuses" (participantSelectedEvent)="onStatusSelected($event)">
+      <ng-template #itemTemplate let-status>
+        <span>{{status.displayName}}</span>
+      </ng-template>
+    </cvc-participant-list>
     <cvc-participant-list listTitle="Revisors" [participantList]="uniqueRevisors$ | ngrxPush" (participantSelectedEvent)="onRevisorSelected($event)">
       <ng-template #itemTemplate let-user>
         <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
