--- a/client/src/app/views/variants/variants-detail/variants-revisions/variants-revisions.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-revisions/variants-revisions.page.html
@@ -1,1 +1,1 @@
-<p>variants-revisions works!</p>
+<cvc-revisions-list-and-filter [id]="this.variantId" [entityType]="this.entityType"></cvc-revisions-list-and-filter>
