--- a/client/src/app/views/evidence/evidence-detail/evidence-revisions/evidence-revisions.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-revisions/evidence-revisions.page.html
@@ -1,1 +1,1 @@
-<p>evidence-revisions works!</p>
+<cvc-revisions-list-and-filter [id]="this.eid" [entityType]="this.entityType"></cvc-revisions-list-and-filter>
